crates/carta/tests/snapshots/golden_writer__asciidoc__math__aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[latexmath]
++++
\begin{aligned} x^2 + 1 \\ \frac{a}{b} \end{aligned}
++++

[latexmath]
++++
\begin{aligned} a &= b + c \\ d &= e \end{aligned}
++++

stack latexmath:[\begin{aligned} p \\ q \\ r \end{aligned}]
