crates/carta/tests/snapshots/golden_writer__asciidoc__math__braces.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
latexmath:[\overbrace{a+b}] latexmath:[\underbrace{x+y+z}]
latexmath:[\overbrace{a+b}^{n}] latexmath:[\underbrace{x+y}_{k}]
