crates/carta/tests/snapshots/golden_writer__asciidoc__math__cancel.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
latexmath:[\cancel{x}] latexmath:[\bcancel{y+z}]
latexmath:[\xcancel{abc}]
