crates/carta/tests/snapshots/golden_writer__asciidoc__math__ext-arrows.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
latexmath:[\xrightarrow{f}] latexmath:[\xleftarrow{g}]
latexmath:[\xrightarrow[u]{f}]
