crates/carta/tests/snapshots/golden_writer__asciidoc__math__frac-styles.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
latexmath:[\frac{a}{b}] latexmath:[\tfrac{a}{b}]
latexmath:[\dfrac{a}{b}]
