crates/carta/tests/snapshots/golden_writer__asciidoc__math__math-display.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[latexmath]
++++
\int_0^1 x \, dx
++++
