crates/carta/tests/snapshots/golden_writer__asciidoc__math__math-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
an equation latexmath:[a^2 + b^2 = c^2] inline
