crates/carta/tests/snapshots/golden_writer__asciidoc__math__matrix-array.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
latexmath:[\begin{array}{cc}a & b \\ c & d\end{array}]
latexmath:[\begin{array}{ccc}1 & 2 & 3 \\ 4 & 5 & 6\end{array}]
