crates/carta/tests/snapshots/golden_writer__asciidoc__math__modulo.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
latexmath:[a \pmod{n}] latexmath:[a \mod b] latexmath:[a \bmod b]
latexmath:[a \pod{n}]
