crates/carta/tests/snapshots/golden_writer__asciidoc__math__over-under-set.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
latexmath:[\overset{a}{b}] latexmath:[\underset{a}{b}]
latexmath:[\stackrel{\text{def}}{=}]
